// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots renders a button with no type defined 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  color: #333333;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
  font-weight: 500;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: #f0f1f2;
  border-color: #005cb9;
  color: #333333;
}

.emotion-1:hover:focus {
  background-color: #ced3d9;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #f0f1f2;
  border-color: #ced3d9;
  color: #333333;
}

.emotion-1:hover {
  background-color: #ced3d9;
  border-color: #a1aab3;
  color: #333333;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #ffffff;
  border-color: #ced3d9;
  color: #ced3d9;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  border-color: #005cb9;
  -webkit-animation: animation-1lvxwzr 100ms;
  animation: animation-1lvxwzr 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
  font-size: inherit;
  font-weight: inherit;
  padding: 0px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<button
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Button
  </span>
</button>
`;

exports[`Button Snapshots renders a growing button 1`] = `
.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
  font-size: inherit;
  font-weight: inherit;
  padding: 0px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  color: #333333;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
  font-weight: 500;
  width: 100%;
  max-width: 100%;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: #f0f1f2;
  border-color: #005cb9;
  color: #333333;
}

.emotion-1:hover:focus {
  background-color: #ced3d9;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #f0f1f2;
  border-color: #ced3d9;
  color: #333333;
}

.emotion-1:hover {
  background-color: #ced3d9;
  border-color: #a1aab3;
  color: #333333;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #ffffff;
  border-color: #ced3d9;
  color: #ced3d9;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  border-color: #005cb9;
  -webkit-animation: animation-1lvxwzr 100ms;
  animation: animation-1lvxwzr 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #005cb9;
}

<button
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Button
  </span>
</button>
`;

exports[`Button Snapshots renders as expected 1`] = `
.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  color: #333333;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
  font-weight: 500;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1:focus {
  background-color: #f0f1f2;
  border-color: #005cb9;
  color: #333333;
}

.emotion-1:hover:focus {
  background-color: #ced3d9;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #f0f1f2;
  border-color: #ced3d9;
  color: #333333;
}

.emotion-1:hover {
  background-color: #ced3d9;
  border-color: #a1aab3;
  color: #333333;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #ffffff;
  border-color: #ced3d9;
  color: #ced3d9;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  border-color: #005cb9;
  -webkit-animation: animation-1lvxwzr 100ms;
  animation: animation-1lvxwzr 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #005cb9;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
  font-size: inherit;
  font-weight: inherit;
  padding: 0px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

<button
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Button
  </span>
</button>
`;
